refactor(service,view): elimina prefijos 'I' en repositorios y ajusta dependencias
Se reemplazan las referencias a interfaces de repositorios con prefijo 'I' por sus implementaciones sin prefijo en los servicios de la capa 'view', simplificando la nomenclatura y mejorando la consistencia del código.

Además, se ajustan las dependencias y se eliminan imports innecesarios relacionados con los repositorios antiguos.